--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,6 +10,9 @@
 
 <body>
   <h1>All Campgrounds</h1>
+  <div>
+    <a href="/campgrounds/new">Add New Campground</a>
+  </div>
   <ul>
     <% for (let campground of campgrounds){%>
       <li>
