--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,11 +5,15 @@
   <h2>
     <%= campground.location %>
   </h2>
+  <img src="<%= campground.image%>" alt="" />
   <p>
-    <a href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+    <%= campground.description %>
   </p>
   <p>
-  <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+    <a href="/campgrounds/<%= campground._id%>/edit">Edit</a>
+  </p>
+  <p>
+  <form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
     <button>DELETE</button>
   </form>
   </p>
