--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,40 +1,70 @@
 <% layout('layouts/boilerplate')%>
-  <% layout('layouts/boilerplate')%>
-    <div class="row">
-      <h1 class="text-center">Edit Campground</h1>
-      <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST">
-          <div class="mb-3">
-            <label class="form-label" for="title">Title</label>
-            <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title %> ">
+  <div class="row">
+    <h1 class="text-center">Edit Campground</h1>
+    <div class="col-6 offset-3">
+      <form action="/campgrounds" method="POST" novalidate class="validation-form">
+        <div class="mb-3">
+          <label class="form-label" for="title">Title</label>
+          <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title %>"
+            required>
+          <div class="valid-feedback">
+            Approved!
           </div>
-          <div class="mb-3">
-            <label class="form-label" for="location">Location</label>
-            <input class="form-control" type="text" id="location" name="campground[location]"
-              value="<%=campground.location %> ">
+          <div class="invalid-feedback">
+            Please choose a title.
           </div>
-          <div class="mb-3">
-            <label class="form-label" for="image">Image Url</label>
-            <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%> ">
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="location">Location</label>
+          <input class="form-control" type="text" id="location" name="campground[location]"
+            value="<%=campground.location %> " required>
+          <div class="valid-feedback">
+            Approved!
           </div>
-          <div class="mb-3">
-            <label class="form-label" for="price">Campground Price</label>
-            <div class="input-group">
-              <span class="input-group-text" id="price-label">$</span>
-              <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
-                aria-describedby="price-labels" name="campground[price]" value="<%=campground.price%>">
-
+          <div class="invalid-feedback">
+            Please provide a valid location.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="image">Image Url</label>
+          <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%> "
+            required>
+          <div class="valid-feedback">
+            Approved!
+          </div>
+          <div class="invalid-feedback">
+            Please add an image URL.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="price">Campground Price</label>
+          <div class="input-group">
+            <span class="input-group-text" id="price-label">$</span>
+            <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
+              aria-describedby="price-labels" name="campground[price]" value="<%=campground.price%>" required>
+            <div class="valid-feedback">
+              Approved!
+            </div>
+            <div class="invalid-feedback">
+              Please add a price
             </div>
           </div>
-          <div class="mb-3">
-            <label class="form-label" for="description">Description</label>
-            <textarea class="form-control" type="text" id="location" name="campground[description]"
-              rows="3"><%=campground.description %> </textarea>
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="description">Description</label>
+          <textarea class="form-control" type="text" id="location" name="campground[description]" rows="3"
+            required><%=campground.description %> </textarea>
+          <div class="valid-feedback">
+            Approved!
           </div>
-          <div class="mb-3">
-            <button class="btn btn-info">Update Campground</button>
+          <div class="invalid-feedback">
+            Please add a description.
           </div>
-        </form>
-        <a href="/campgrounds">Back to Campgrounds</a>
-      </div>
+        </div>
+        <div class="mb-3">
+          <button class="btn btn-info">Update Campground</button>
+        </div>
+      </form>
+      <a href="/campgrounds">Back to Campgrounds</a>
     </div>
+  </div>
