--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -32,16 +32,16 @@
         </div>
       </div>
       <h2>Leave A Review</h2>
-      <form action="" class="mb-3">
+      <form class="mb-3" action="/campgrounds/<%=campground._id%>/reviews" method="POST">
         <div class="mb-3">
           <label class="form-label" for="rating">Rating</label>
           <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="" />
         </div>
         <div class="mb-3">
           <label class="form-label" for="body">Review</label>
-          <textarea class="form-control " name="review[body" id="body" cols="30" rows="3"></textarea>
+          <textarea class="form-control " name="review[body]" id="body" cols="30" rows="3"></textarea>
         </div>
+        <button class="btn btn-success">Submit Review</button>
       </form>
-      <button class="btn btn-success">Submit Review</button>
     </div>
   </div>
