--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
   <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6 ">
       <div class="card mb-3">
         <img src="<%= campground.image%>" class="card-img-top" alt="...">
         <div class="card-body">
@@ -30,7 +30,10 @@
         <div class="card-footer">
           2 days ago
         </div>
+
       </div>
+    </div>
+    <div class="col-6">
       <h2>Leave A Review</h2>
       <form class="mb-3 validation-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate>
         <div class="mb-3">
@@ -44,16 +47,18 @@
             Approved!
           </div>
         </div>
-
         <button class="btn btn-success">Submit Review</button>
       </form>
       <% for( let review of campground.reviews) { %>
-        <div class="mb-3">
-          <p>Rating: <%= review.rating %>
-          </p>
-          <p>
-            Review: <%=review.body %>
-          </p>
+        <div class="mb-3 card">
+          <div class="mb-3 card-body">
+            <h5 class="card-title">
+              Rating: <%= review.rating %>
+            </h5>
+            <p class="card-text">
+              Review: <%=review.body %>
+            </p>
+          </div>
         </div>
         <% } %>
     </div>
