--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,9 +18,12 @@
         </li>
       </ul>
       <div class="navbar-nav ml-auto">
-        <a class="nav-link" href="/login">Login</a>
-        <a class="nav-link" href="/register">Register</a>
-        <a class="nav-link" href="/logout">Logout</a>
+        <% if(!currentUser) {%>
+          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/register">Register</a>
+          <% } else { %>
+            <a class="nav-link" href="/logout">Logout</a>
+            <% } %>
       </div>
     </div>
   </div>
