--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate')%>
+  <link rel="stylesheet" href="/stylesheets/stars.css" />
   <div class="row">
     <div class="col-6 ">
       <div class="card mb-3">
@@ -40,6 +41,8 @@
       <% if(currentUser) {%>
 
         <h2>Leave A Review</h2>
+
+
         <form class="mb-3 validation-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate>
           <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
@@ -58,9 +61,12 @@
           <% for( let review of campground.reviews) { %>
             <div class="mb-3 card">
               <div class="mb-3 card-body">
-                <h5 class="card-title">
+                <!-- <h5 class="card-title">
                   Rating: <%= review.rating %>
-                </h5>
+                </h5> -->
+                <p class="starability-result" data-rating="<%=review.rating%>">
+                  Rated: <%= review.rating %> stars
+                </p>
                 <h6 class="card-subtitle mb-2 text-muted">by <%=review.author.username %>
                 </h6>
                 <p class="card-text">
