--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
   <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-      <form class="validation-form" action="/campgrounds" method="POST" novalidate>
+      <form class="validation-form" action="/campgrounds" method="POST" novalidate enctype="multipart/form-data">
         <div class="mb-3">
           <label class="form-label" for="title">Title</label>
           <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -24,7 +24,8 @@
             Please provide a valid location.
           </div>
         </div>
-        <div class="mb-3">
+        <input type="file" name="image" id="image" multiple>
+        <!-- <div class="mb-3">
           <label class="form-label" for="image">Image Url</label>
           <input class="form-control" type="text" id="image" name="campground[image]" required>
           <div class="valid-feedback">
@@ -32,8 +33,8 @@
           </div>
           <div class="invalid-feedback">
             Please provide a valid URL image.
-          </div>
-        </div>
+          </div> 
+        </div>-->
         <div class="mb-3">
           <label class="form-label" for="price">Campground Price</label>
           <div class="input-group">
