adds cloudinary for image upload

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -24,7 +24,7 @@
             Please provide a valid location.
           </div>
         </div>
-        <input type="file" name="image" id="image" multiple>
+        <input type="file" name="image" id="" multiple>
         <!-- <div class="mb-3">
           <label class="form-label" for="image">Image Url</label>
           <input class="form-control" type="text" id="image" name="campground[image]" required>
