adds file input from bootsrap

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -24,7 +24,11 @@
             Please provide a valid location.
           </div>
         </div>
-        <input type="file" name="image" id="" multiple>
+        <div class="mb-3">
+          <label for="formFileMultiple" class="form-label">Choose image(s)</label>
+          <input class="form-control" type="file" name="image" id="image" multiple>
+        </div>
+        <!-- <input type="file" name="image" id="" multiple> -->
         <!-- <div class="mb-3">
           <label class="form-label" for="image">Image Url</label>
           <input class="form-control" type="text" id="image" name="campground[image]" required>
