--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -27,8 +27,8 @@
           </div>
         </div>
         <div class="mb-3">
-          <label class="form-label" for="image">Add Images</label>
-          <input type="file" name="image" id="" multiple>
+          <label for="formFileMultiple" class="form-label">Add more image(s)</label>
+          <input class="form-control" type="file" name="image" id="image" multiple>
         </div>
         <div class="mb-3">
           <label class="form-label" for="price">Campground Price</label>
