--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -48,12 +48,15 @@
           <label class="form-label" for="description">Description</label>
           <textarea class="form-control" type="text" id="location" name="campground[description]" rows="3"
             required><%=campground.description %> </textarea>
-          <div class="valid-feedback">
-            Approved!
-          </div>
-          <div class="invalid-feedback">
-            Please add a description.
-          </div>
+        </div>
+        <div class="mb-3">
+          <% campground.images.forEach(function(img, i){ %>
+            <img class="img-thumbnail" src="<%=img.url%>" alt="">
+            <div class="form-check-inline">
+              <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
+            </div>
+            <label for="image-<%=i%>">Delete?</label>
+            <% }) %>
         </div>
         <div class="mb-3">
           <button class="btn btn-info">Update Campground</button>
