--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -50,13 +50,13 @@
             required><%=campground.description %> </textarea>
         </div>
         <div class="mb-3">
-          <% campground.images.forEach(function(img, i){ %>
-            <img class="img-thumbnail" src="<%=img.url%>" alt="">
+          <% campground.images.forEach(function(img, i) { %>
+            <img src="<%=img.url%>" class="img-thumbnail w-50 rounded" alt="">
             <div class="form-check-inline">
               <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
             </div>
             <label for="image-<%=i%>">Delete?</label>
-            <% }) %>
+            <% })%>
         </div>
         <div class="mb-3">
           <button class="btn btn-info">Update Campground</button>
