--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -6,8 +6,8 @@
       <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <% campground.images.forEach((img, i)=> { %>
-            <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-              <img src="<%= img.url%>" class="d-block w-100" alt="">
+            <div class="carousel-item <%= i === 0 ? 'active' : ''%> ">
+              <img src="<%= img.url%>" class="d-block w-100 h-100" alt="">
             </div>
             <% }) %>
 
