--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,7 +8,11 @@
           <div class="col-md-4">
             <% if(campground.images.length> 0) { %>
               <img class="img-fluid" src="<%= campground.images[0].url %>" alt="">
-              <% } %>
+              <% } else {%>
+                <img class="img-fluid"
+                  src="https://images.unsplash.com/photo-1668696381185-46c77ee52d1a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=900&q=60"
+                  alt="">
+                <% } %>
           </div>
           <div class="col-md-8">
             <div class="card-body">
