--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,9 @@
 <% layout('layouts/boilerplate')%>
   <link rel="stylesheet" href="/stylesheets/stars.css" />
-
-
   <div class="row">
     <div class="col-6 ">
       <div id='map' style='width: 400px; height: 300px;'></div>
-      <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
+      <div id="campgroundCarousel" class="carousel slide" data-ride="carousel" data-bs-interval="false">
         <div class="carousel-inner">
           <% campground.images.forEach((img, i)=> { %>
             <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
@@ -119,6 +117,7 @@
 
   <script>
     const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground = '<%-JSON.stringify(campground)%>';
   </script>
 
   <script src="/javascripts/showPageMap.js"></script>
