--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,12 +2,12 @@
   <link rel="stylesheet" href="/stylesheets/stars.css" />
   <div class="row">
     <div class="col-6 ">
-      <div id='map' style='width: 400px; height: 300px;'></div>
+
       <div id="campgroundCarousel" class="carousel slide" data-ride="carousel" data-bs-interval="false">
         <div class="carousel-inner">
           <% campground.images.forEach((img, i)=> { %>
             <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-              <img src="<%= img.url%>" class="d-block w-100 h-100" alt="">
+              <img src="<%= img.url%>" class="d-block" style='width: 500px; height: 300px;' salt="">
             </div>
             <% }) %>
         </div>
@@ -58,6 +58,7 @@
       </div>
     </div>
     <div class="col-6">
+      <div id='map' class="mb-3" style='width: 400px; height: 300px;'></div>
       <% if(currentUser) {%>
         <h2>Leave A Review</h2>
         <form class="mb-3 validation-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate>
