--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate')%>
   <div class="container">
+    <div id="map" style="width: 100%; height: 500px"></div>
     <h1>All Campgrounds</h1>
 
     <% for (let campground of campgrounds){%>
@@ -34,3 +35,10 @@
       </div>
       <% }%>
   </div>
+
+  <script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+
+  </script>
+
+  <script src="/javascripts/clusterMap.js"></script>
