--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -38,7 +38,8 @@
 
   <script>
     const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-
+    const campgrounds = '<%-JSON.stringify(campgrounds)%>';
+    const parsedCampgrounds = { features: JSON.parse(campgrounds) };
   </script>
 
   <script src="/javascripts/clusterMap.js"></script>
