--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,26 +1,39 @@
 <% layout('layouts/boilerplate') %>
-  <h1>Register</h1>
-  <form action="/register" method="POST" class="validation-form" novalidate>
-    <div class="mb-3">
-      <label class="form-label" for="=username">Username</label>
-      <input class="form-control" type="text" id="=username" name="username" required>
-      <div class="valid-feedback">
-        Approved!
+  <div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="row">
+      <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+        <div class="card shadow">
+          <img
+            src="https://images.unsplash.com/photo-1565257074896-83694ab78bb6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8ODF8fGNhbXBpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
+            class="card-img top" />
+          <div class="card-body">
+            <h5 class="card-title">Register</h5>
+            <form action="/register" method="POST" class="validation-form" novalidate>
+              <div class="mb-3">
+                <label class="form-label" for="=username">Username</label>
+                <input class="form-control" type="text" id="=username" name="username" required autofocus>
+                <div class="valid-feedback">
+                  Approved!
+                </div>
+              </div>
+              <div class="mb-3">
+                <label class="form-label" for="=email">Email</label>
+                <input class="form-control" type="email" id="=email" name="email" required>
+                <div class="valid-feedback">
+                  Approved!
+                </div>
+              </div>
+              <div class="mb-3">
+                <label class="form-label" for="=password">Password</label>
+                <input class="form-control" type="password" id="=password" name="password" required>
+                <div class="valid-feedback">
+                  Approved!
+                </div>
+              </div>
+              <button class="btn btn-info btn-block">Register</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="mb-3">
-      <label class="form-label" for="=email">Email</label>
-      <input class="form-control" type="email" id="=email" name="email" required>
-      <div class="valid-feedback">
-        Approved!
-      </div>
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="=password">Password</label>
-      <input class="form-control" type="password" id="=password" name="password" required>
-      <div class="valid-feedback">
-        Approved!
-      </div>
-    </div>
-    <button class="btn btn-info">Register</button>
-  </form>
+  </div>
