--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="col-6">
-      <div id='map' class="mb-3" style='width: 400px; height: 300px;'></div>
+      <div id='map' class="mb-3"></div>
       <% if(currentUser) {%>
         <h2>Leave A Review</h2>
         <form class="mb-3 validation-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate>
